Fixed Margin on mobile navbar

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4095,6 +4095,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 @media (max-width: 767px) {
+  .navbar-form {
+    margin-left: 0px;
+  }
+  
   .navbar-form .form-group {
     margin-bottom: 5px;
   }
@@ -4154,7 +4158,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-right {
     float: right !important;
-    margin-right: -15px;
+    margin: 0px 15px;
   }
   .navbar-right ~ .navbar-right {
     margin-right: 0;
